--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <p class="prepromise"></p>
     </div>
     <div class="container sun"></div>
+    <div class="copyright">все предсказания распостраняются только на Оганесян Карину</div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
