--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+        (function(){
+           emailjs.init("user_NRXJ4zdGpHo0LsoQiOhfy");
+        })();
+     </script>
     <script src="js/main.js"></script>
 </body>
 </html>
