--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="container sun"></div>
     <div class="date"></div>
     <div class="copyright">все предсказания распостраняются только на Оганесян Карину</div>
+    <div id="particles-js"></div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -26,6 +27,7 @@
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js">
     </script>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script type="text/javascript">
         (function(){
            emailjs.init("user_NRXJ4zdGpHo0LsoQiOhfy");
