--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
     </script>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script type="text/javascript">
-        (function(){
+        (function()
+        {
            emailjs.init("user_NRXJ4zdGpHo0LsoQiOhfy");
         })();
      </script>
